cmake_minimum_required(VERSION 3.22)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

# leetcode
add_subdirectory(68)
add_subdirectory(1722)
add_subdirectory(890)
add_subdirectory(273)
add_subdirectory(1486)
add_subdirectory(1351)
add_subdirectory(868)
add_subdirectory(1776)
add_subdirectory(1936)
add_subdirectory(799)
add_subdirectory(218)
add_subdirectory(94)
add_subdirectory(1704)
add_subdirectory(1079)
add_subdirectory(2150)
add_subdirectory(345)
add_subdirectory(1619)

# 剑指offer
add_subdirectory(offer_22)
add_subdirectory(offer_4)
add_subdirectory(offer_63)
